Icon font for Netrunner faction logos

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,8 +25,8 @@ body{
 footer{
   background: #555;
   color:#FCFCFC;
-  padding:150px 0 50px;
-
+  padding:50px 0;
+  margin: 50px 0 0;
   a{
     &:link,&:visited{
       color:#F9F9F9;
