--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -15,7 +15,7 @@
         <li class="dropdown">
           <%= link_to "Dropdown", "javascript:void(0);", class:"dropdown-toggle", "data-toggle":"dropdown", role:"button" %>
           <ul class="dropdown-menu">
-            <li><%= link_to "Leagues", "#" %></li>
+            <li><%= link_to "Leagues", leagues_path %></li>
           </ul>
         </li>
       </ul>
@@ -30,12 +30,12 @@
               <li><%= link_to "Profile", profile_path %></li>
               <li class="divider"></li>
               <li class="dropdown-header">My Leagues</li>
-              <%# <% if current_user.user_leagues.any? %1> %>
-              <%#   <% current_user.user_leagues.each do |league| %1> %>
+              <%# <% if current_user.user_ligas.any? %1> %>
+              <%#   <% current_user.ligas.each do |league| %1> %>
               <%#     <li><%= link_to league.display_name.truncate(25), "#" %1></li> %>
               <%#   <% end %1> %>
               <%# <% end %1> %>
-              <li><%= link_to "New League", "#" %></li>
+            <li><%= link_to new_league_path do %><small><i class="fa fa-plus"></i> New League</small><% end %></li>
             <% else %>
               <li><%= link_to "Log in", login_path %></li>
               <li><%= link_to "Register", register_path %></li>
