--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
     <div class="container">
       <%= yield %>
+      <%= console if Rails.env == "development" %>
     </div>
     
     <%= render partial: "shared/foot" %>
