--- a/app/views/shared/_foot.html.erb
+++ b/app/views/shared/_foot.html.erb
@@ -1,11 +1,11 @@
-
+<!-- footer -->
 <footer class="footer">
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <p><%= link_to "About", "#" %></p>
+        <h4><%= link_to "About", "#" %></h4>
       </div>
     </div>
-    <p><small>This website is not produced, endorsed, supported, or affiliated with Fantasy Flight Games and/or Wizards of the Coast.</small></p>
+    <p><small>This website is not produced, endorsed, supported, or affiliated with <%= link_to "Fantasy Flight Games", "#", target:"_blank" %> and/or <%= link_to "Wizards of the Coast", "#", target:"_blank" %>.</small></p>
   </div>
 </footer>
