--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>League</title>
+    <title><%= page_title %></title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Exo:400,600' rel='stylesheet' type='text/css'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <%= render partial: "shared/head" %>
-
+    <div id="body">
     <div class="container">
       <%= yield %>
       <%= console if Rails.env == "development" %>
+    </div>
     </div>
     
     <%= render partial: "shared/foot" %>
