League creation, including a first pass Google Maps integration for selecting offline league locations; add a geolocation gem for filtering Leagues by location; User profile editing (mostly just password resets for now); Finalize (ish) logout process; Viewport meta tag set for mobile views

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,6 +61,10 @@ footer{
   background-color:#555;
   color:#FCFCFC;
 }
+.navbar-inverse .navbar-toggle{
+  color:#FCFCFC;
+}
+
 .dropdown-menu > li > a:hover,
 .dropdown-menu > li > a:focus{
   background-color:#555;
