--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
 
-    <script type="text/javascript" src='http://maps.google.com/maps/api/js?libraries=places&key=AIzaSyCj4FLHBWfK1ksJ3p-249j2YWTeVzzE96M'></script>
+    <script type="text/javascript" src='http://maps.google.com/maps/api/js?libraries=places&key=<%= ENV['maps_api_key'] %>'></script>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Exo:400,600' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
