--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -1,8 +1,9 @@
-<h1>LeaguesController#index</h1>
+<h1>Leagues</h1>
 
 <% @leagues.each do |league| %>
-  <h3><%= league.display_name %></h3>
-  <code>
-    <%= league.to_xml %>
-  </code>
+  <h3>
+    <%= link_to league.display_name, league_path(league.id,league.slug) %>
+    <% if league.offline? %><small><%= offline_league_location(league) %></small><% end %>
+  </h3>
+  <%= league.description_html.html_safe %>
 <% end %>
