league games; league seasons; aasm gem; layout changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,6 +63,9 @@ footer{
 }
 .navbar-inverse .navbar-toggle{
   color:#FCFCFC;
+  background:none;
+  border:none;
+  padding:6px;
 }
 .dropdown-menu > li > a{
   font-family:'Lora', serif;
