--- a/app/views/leagues/new.html.erb
+++ b/app/views/leagues/new.html.erb
@@ -1,3 +1,5 @@
 <h1>LeaguesController#new</h1>
 
-<%= render partial: "leagues/form", locals: { league: @league } %>
+<%= form_for @league, url: leagues_path, html: { class: "form-horizontal" } do |f| %>
+<%= render partial: "leagues/form", locals: { f: f } %>
+<% end %>
