--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -4,47 +4,53 @@
 </h1>
 <%= (@league.description_html || "").html_safe %>
 
+<% if current_user.member_of?(@league) %>
+  <h3>My Games</h3>
+  <p>Coming soon...</p>
+<% end %>
+
 <div class="row">
 
-<div class="col-md-8">
-  <h3>Current table</h3>
-  <div class="table-responsive">
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th class="narrow text-center">#</th>
-          <th>Player</th>
-          <th class="narrow text-center"><span title="Wins" data-toggle="tooltip" data-placement="top">W</span></th>
-          <th class="narrow text-center"><span title="Losses" data-toggle="tooltip" data-placement="top">L</span></th>
-          <th class="narrow text-center"><span title="Agenda Points" data-toggle="tooltip" data-placement="top">AP</span></th>
-          <th class="narrow text-center"><span title="League Points" data-toggle="tooltip" data-placement="top">LP</span></th>
-        </tr>
-      </thead>
-      <tbody>
-      <tr><td colspan="6" class="text-center"><em>Coming soon!</em></td></tr>
-      <% (1..5).each do |i| %>
-        <tr>
-          <td class="text-center"><%= i %></td>
-          <td><%= current_user.display_name %><%= " <small>#{current_user.jinteki_username}</small>".html_safe unless current_user.jinteki_username.blank? %></td>
-          <td class="text-center"><%= rand(1..5) %></td>
-          <td class="text-center"><%= rand(1..5) %></td>
-          <td class="text-center"><%= rand(1..45) %></td>
-          <td class="text-center"><%= rand(1..45) %></td>
-        </tr>
-      <% end %>
-      </tbody>
-    </table>
-  </table>
-</div>
-</div>
+  <div class="col-md-8">
+    <% unless @season.blank? %>
+      <h3><%= @season.display_name %> - League table</h3>
+      <div class="table-responsive">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th class="narrow text-center">#</th>
+              <th>Player</th>
+              <th class="narrow text-center"><span title="Wins" data-toggle="tooltip" data-placement="top">W</span></th>
+              <th class="narrow text-center"><span title="Losses" data-toggle="tooltip" data-placement="top">L</span></th>
+              <th class="narrow text-center"><span title="Agenda Points" data-toggle="tooltip" data-placement="top">AP</span></th>
+              <th class="narrow text-center"><span title="League Points" data-toggle="tooltip" data-placement="top">LP</span></th>
+            </tr>
+          </thead>
+          <tbody>
+          <tr><td colspan="6" class="text-center"><em>Coming soon!</em></td></tr>
+          <% (1..5).each do |i| %>
+            <tr>
+              <td class="text-center"><%= i %></td>
+              <td><%= current_user.display_name %><%= " <small>#{current_user.jinteki_username}</small>".html_safe unless current_user.jinteki_username.blank? %></td>
+              <td class="text-center"><%= rand(1..5) %></td>
+              <td class="text-center"><%= rand(1..5) %></td>
+              <td class="text-center"><%= rand(1..45) %></td>
+              <td class="text-center"><%= rand(1..45) %></td>
+            </tr>
+          <% end %>
+          </tbody>
+        </table>
+      </div>
+    <% end %>
+  </div>
 
-<div class="col-md-4">
-<h3>Where we play</h3>
-<% if @league.offline? %>
-  <iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=<%= ENV["maps_api_key"] %>&q=<%= @league.latlong %>" allowfullscreen></iframe>
-<% end %>
-<% if @league.online? %>
-  <%= link_to @league.online_location, @league.online_location, target:"_blank" %>
-<% end %>
-</div>
+  <div class="col-md-4">
+    <h3>Where we play</h3>
+    <% if @league.offline? %>
+      <iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=<%= ENV["maps_api_key"] %>&q=<%= @league.latlong %>" allowfullscreen></iframe>
+    <% end %>
+    <% if @league.online? %>
+      <%= link_to @league.online_location, @league.online_location, target:"_blank" %>
+    <% end %>
+  </div>
 </div>
