--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -7,9 +7,9 @@
 <% if logged_in? && current_user.member_of?(@league) %>
   <h3>My Games</h3>
     <% unless @season.blank? %>
-      <%= render partial: "seasons/user_games", locals: { games: Game.for_player(current_user.id,@season.id) } %>
+      <%= render partial: "seasons/user_games", locals: { games: @games } %>
     <% else %>
-      <p>No games scheduled</p>
+      <p>No active season</p>
     <% end %>
 <% else %>
   <p><%= link_to "Sign up to this league", signup_league_path(@league.id), class: "btn btn-success" if true %></p>
