deletion confirmation modal; admin user flag (probably a safer way to do this?); game result recording; admin management of game result types; select2 gem added

--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -7,7 +7,11 @@
 <% if logged_in? && current_user.member_of?(@league) %>
   <h3>My Games</h3>
     <% unless @season.blank? %>
-      <%= render partial: "seasons/user_games", locals: { games: @games } %>
+      <% if @games.any? %>
+        <%= render partial: "seasons/user_games", locals: { games: @games } %>
+      <% else %>
+        <p><em>You don't have any upcoming games</em></p>
+      <% end %>
     <% else %>
       <p>No active season</p>
     <% end %>
