--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -1,9 +1,5 @@
 <h1>Leagues</h1>
 
 <% @leagues.each do |league| %>
-  <h3>
-    <%= link_to league.display_name, show_league_path(league.id,league.slug) %>
-    <% if league.offline? && !league.offline_location.blank? %><small><%= league.offline_location %></small><% end %>
-  </h3>
-  <%= (league.description_html || "").html_safe %>
+  <%= render partial: "leagues/short", locals: { league: league } %>
 <% end %>
