--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -10,4 +10,26 @@
   <p><%= link_to "Edit profile", edit_profile_path, class: "btn btn-default" %></p>
 <% end %>
 
+<div class="row">
+  <div class="col-md-6">
+    <h3>League Memberships</h3>
+    <% if @user.leagues.any? %>
+      <% @user.leagues.each do |league| %>
+        <%= render partial: "leagues/short", locals: { league: league } %>
+      <% end %>
+    <% else %>
+      <p><%= @own_profile ? "You have" : "This user has" %>n't joined any leagues yet.</p>
+    <% end %>
+  </div>
+
+  <% if @user.owned_leagues.any? %>
+    <div class="col-md-6">
+      <h3>Owner of</h3>
+      <% @user.owned_leagues.each do |league| %>
+        <%= render partial: "leagues/short", locals: { league: league } %>
+      <% end %>
+    </div>
+  <% end %>
+</div>
+
 <p>Not sure what other profile information should go here</p>
