--- a/app/views/leagues/_form.html.erb
+++ b/app/views/leagues/_form.html.erb
@@ -1,17 +1,17 @@
   <div class="form-group">
-    <%= f.label :display_name, "League name", class: "col-md-4 control-label" %>
-    <div class="col-md-8">
+    <%= f.label :display_name, "League name", class: "col-md-2 control-label" %>
+    <div class="col-md-6">
       <%= f.text_field :display_name, class: "form-control" %>
     </div>
   </div>
   <div class="form-group">
-    <%= f.label :location_type, "Location", class: "col-md-4 control-label" %>
-    <div class="col-md-4">
+    <%= f.label :location_type, "Location", class: "col-md-2 control-label" %>
+    <div class="col-md-3">
       <%= f.select :location_type, options_for_select([["Offline","offline"],["Online","online"]]), {}, { id:"type-select", class: "form-control" } %>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
       <div class="location-select offline">
-        <%= text_field_tag :lookup_address, "", id: "lookup-address", class: "form-control" %>
+        <%= text_field_tag :lookup_address, @league.latlong, id: "lookup-address", class: "form-control" %>
       </div>
       <div class="location-select online" style="display:none;">
         <%= f.text_field :online_location, placeholder: "http://...", class: "form-control" %>
@@ -20,25 +20,25 @@
     </div>
   </div>
   <div class="form-group location-select offline">
-    <div class="col-md-8 col-md-offset-4">
+    <div class="col-md-6 col-md-offset-2">
       <div class="location-select offline">
         <%= f.hidden_field :latitude %>
         <%= f.hidden_field :longitude %>
-        <div id="map-picker" style="width:100%; height: 250px;"></div>
+        <div id="map-picker" style="width:100%; height: 200px;"></div>
       </div>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :description, "Description", class: "col-md-4 control-label" %>
-    <div class="col-md-8">
+    <%= f.label :description, "Description", class: "col-md-2 control-label" %>
+    <div class="col-md-6">
       <%= f.text_area :description_markdown, class: "form-control", placeholder: "Provide information about day/time of offline group meetings, specific directions to location", rows: 8 %>
       <small class="help-block">Accepts <a href="#markdown">markdown</a></small>
     </div>
   </div>
 
   <div class="form-group">
-    <div class="col-md-8 col-md-offset-4">
+    <div class="col-md-6 col-md-offset-2">
       <%= f.submit "Create league", class: "btn btn-success" %>
     </div>
   </div>
@@ -52,16 +52,14 @@ var getLocation = function() {
     navigator.geolocation.getCurrentPosition(function(position){
       latitude = position.coords.latitude;
       longitude = position.coords.longitude; 
-      setMapPicker();
+      setMapPicker(latitude,longitude);
     });
   } else {
-    setMapPicker();
+    setMapPicker(latitude,longitude);
   }
 };
 
-var setMapPicker = function(){
-  $('#liga_latitude').val(latitude);
-  $('#liga_longitude').val(longitude);
+var setMapPicker = function(latitude,longitude){
   $('#map-picker').locationpicker({
     location: {
       latitude: latitude,
@@ -80,7 +78,11 @@ var setMapPicker = function(){
 }
 
 $(document).ready(function(){
-  getLocation();
+  <% if @league.latitude.blank? || @league.latitude == 0 %>
+    getLocation();
+  <% else %>
+    setMapPicker(latitude,longitude);
+  <% end %>
 
   $('#type-select').on('change',function(e){
     var show = $(this).val();
