--- a/app/views/leagues/edit.html.erb
+++ b/app/views/leagues/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>LeaguesController#edit</h1>
+<h1><%= @league.display_name %> <small>Edit</small></h1>
 
 <%= form_for @league, url: league_path(@league.id), html: { class: "form-horizontal" } do |f| %>
-<%= render partial: "leagues/form", locals: { f: f } %>
+  <%= render partial: "leagues/form", locals: { f: f } %>
 <% end %>
