--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -2,8 +2,16 @@
   <%= @league.display_name %>
   <% if @league.offline? %><small><%= @league.offline_location %></small><% end %>
 </h1>
+
+<% if logged_in? && @league.owner_id = current_user.id %>
+  <p><%= link_to "Edit", edit_league_path(@league.id), class:"btn btn-default btn-sm" %></p> 
+<% end %>
+
+
 <%= (@league.description_html || "").html_safe %>
 
+<div class="row">
+  <div class="col-md-8">
 <% if logged_in? && current_user.member_of?(@league) %>
   <h3>My Games</h3>
     <% unless @season.blank? %>
@@ -19,9 +27,6 @@
   <p><%= link_to "Sign up to this league", signup_league_path(@league.id), class: "btn btn-success" if true %></p>
 <% end %>
 
-<div class="row">
-
-  <div class="col-md-8">
     <% unless @season.blank? %>
       <%= render partial: "seasons/league_table", locals: { season: @season } %>
     <% end %>
