--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -44,9 +44,9 @@
                 <li><%= link_to "Admin Panel", "#" %></li>
               <% end %>
             <li class="divider"></li>
-            <li><%= link_to "Log out", logout_path %></li>
+            <li><%= link_to "Log out", logout_path(path: request.path) %></li>
             <% else %>
-              <li><%= link_to "Log in / Register", login_path %></li>
+              <li><%= link_to "Log in / Register", login_path(path: request.path) %></li>
             <% end %>
           </ul>
         </li>
