--- a/app/views/leagues/edit.html.erb
+++ b/app/views/leagues/edit.html.erb
@@ -1,5 +1,43 @@
 <h1><%= @league.display_name %> <small>Edit</small></h1>
 
-<%= form_for @league, url: league_path(@league.id), html: { class: "form-horizontal" } do |f| %>
-  <%= render partial: "leagues/form", locals: { f: f } %>
-<% end %>
+<div class="row">
+  <div class="col-md-6">
+    <div class="h3">League details</div>
+    <%= form_for @league, url: league_path(@league.id), html: { class: "form-horizontal" } do |f| %>
+      <%= render partial: "leagues/form", locals: { f: f } %>
+    <% end %>
+  </div>
+
+  <div class="col-md-6">
+    <h3>Seasons</h3>
+    <p><%= link_to "New season", new_league_season_path(@league.id), class: "btn btn-default btn-sm" %></p>
+    <div class="table-responsive">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+        <% if @league.seasons.any? %>
+          <% @league.seasons.each do |season| %>
+            <tr>
+              <td><%= season.display_name %></td>
+              <td>
+                <%= link_to '<i class="fa fa-edit"></i>'.html_safe, edit_league_season_path(@league.id,season.id) %>
+                <i class="fa fa-times"></i>
+              </td>
+            </tr>
+          <% end %>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6">
+    <h3>Users</h3>
+</div>
