--- a/app/views/leagues/new.html.erb
+++ b/app/views/leagues/new.html.erb
@@ -1,5 +1,9 @@
-<h1>LeaguesController#new</h1>
+<h1>Create a new League</h1>
 
-<%= form_for @league, url: leagues_path, html: { class: "form-horizontal" } do |f| %>
-<%= render partial: "leagues/form", locals: { f: f } %>
-<% end %>
+<div class="row">
+  <div class="col-md-6">
+    <%= form_for @league, url: leagues_path, html: { class: "form-horizontal" } do |f| %>
+      <%= render partial: "leagues/form", locals: { f: f } %>
+    <% end %>
+  </div>
+</div>
