--- a/app/views/seasons/_user_games.html.erb
+++ b/app/views/seasons/_user_games.html.erb
@@ -1,11 +1,9 @@
-<div class="row">
-<div class="table-responsive col-md-8">
   <table class="table table-striped">
     <thead>
       <tr>
         <th>Corporation</th>
         <th>Runner</th>
-        <th>Result</th>
+        <th style="width:120px;">Result</th>
       </tr>
     </thead>
     <tbody>
@@ -13,24 +11,28 @@
       <tr<% if game.has_player?(current_user.id) %> class="<%= result_row(game.result_for_player(current_user.id)) %>"<% end %>>
         <td>
           <%= game.corp_player.display_name %>
-          <small><%= player_identity(game.corp_identity,"Corp") %></small></br>
+          <% unless game.corp_identity_id.blank? %><br /><small><%= player_identity(game.corp_identity,"Corp") %></small><% end %>
         </td>
         <td>
           <%= game.runner_player.display_name %>
-          <small><%= player_identity(game.runner_identity,"Runner") %></small>
+          <% unless game.runner_identity_id.blank? %><br /><small><%= player_identity(game.runner_identity,"Runner") %></small><% end %>
         </td>
-        <% if game.has_player?(current_user.id) %>
         <td>
           <% if game.unplayed? %>
+            <% if game.has_player?(current_user.id) %>
             <%= link_to 'Submit result'.html_safe, edit_league_season_game_path(game.league_id,game.season_id,game.id), class:"btn btn-default btn-xs" %>
+            <% else %>
+              <em>Upcoming</em>
+            <% end %>
           <% else %>
-            <%= game.result_for_player(current_user.id) %>
+            <% if game.has_player?(current_user.id) %>
+              <%= game.result_for_player(current_user.id) %>
+            <% else %>
+              <%= game.result.display_name %>
+            <% end %>
           <% end %>
         </td>
-        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
-</div>
-</div>
