registration email; fix dev email login

--- a/app/views/user_mailer/confirm_register.html.erb
+++ b/app/views/user_mailer/confirm_register.html.erb
@@ -8,6 +8,6 @@
     <h1>Welcome to ANRLeagues, <%= @user.display_name %></h1>
     <p>You've been registered for blah blah blah.</p>
     <p><%= link_to "Click here", login_url %> to log in!</p>
-    <p><em>&mdahs;The ANRLeagues team</em></p>
+    <p><em>&mdash;The ANRLeagues team</em></p>
   </body>
 </html>
