password reset; registration email; password changed email

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,4 +1,9 @@
-<html>
+<!DOCTYPE HTML>
+<html lang="en">
+  <head>
+    <meta content="text/html; charset=UTF-8;" http-equiv="Content-Type" />
+    <title><%= @subject %></title>
+  </head>
   <body>
     <%= yield %>
   </body>
