--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 
     <% if @require_maps %><script type="text/javascript" src='//maps.google.com/maps/api/js?libraries=places&key=<%= ENV['maps_api_key'] %>'></script><% end %>
     <link href='//fonts.googleapis.com/css?family=Coda' rel='stylesheet' type='text/css'>
-    <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:400,600' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Source+Serif+Pro:400,600' rel='stylesheet' type='text/css'>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
