--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -21,7 +21,14 @@
         </li>
       </ul>
 
-      <ul class="nav navbar-nav navbar-right">
+      <div class="navbar-right">
+      <%= form_tag search_leagues_path, class:"navbar-form navbar-left", method: :get do %>
+        <div class="form-group">
+          <%= text_field_tag :q, params[:q], class: "form-control", placeholder: "Find leagues" %>
+        </div>
+      <% end %>
+
+      <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button">
             <i class="fa fa-user"></i> <i class="fa fa-caret-down"></i>
@@ -51,6 +58,7 @@
           </ul>
         </li>
       </ul>
+    </div>
     </div>
   </div>
 </header>
