--- a/app/views/leagues/_short.html.erb
+++ b/app/views/leagues/_short.html.erb
@@ -1,5 +1,5 @@
 <h3>
   <%= link_to league.display_name, show_league_path(league.id,league.slug) %>
-  <% if league.offline? && !league.offline_location.blank? %><small><%= league.offline_location %></small><% end %>
 </h3>
-<%= (league.description_html || "").html_safe %>
+<p><% if league.offline? && !league.offline_location.blank? %><%= league.offline_location %><% elsif !league.online_location.blank? %><%= league.online_location %><% end %></p>
+<hr />
