--- a/app/views/seasons/_league_table.html.erb
+++ b/app/views/seasons/_league_table.html.erb
@@ -6,8 +6,8 @@
         <th class="narrow text-center">#</th>
         <th>Player</th>
         <th class="narrow text-center"><span title="Played" data-toggle="tooltip" data-placement="top">P</span></th>
-        <th class="narrow text-center"><span title="Wins" data-toggle="tooltip" data-placement="top">W</span></th>
-        <th class="narrow text-center"><span title="Losses" data-toggle="tooltip" data-placement="top">L</span></th>
+        <th class="narrow text-center"><span title="Won" data-toggle="tooltip" data-placement="top">W</span></th>
+        <th class="narrow text-center"><span title="Lost" data-toggle="tooltip" data-placement="top">L</span></th>
         <th class="narrow text-center"><span title="Agenda Points" data-toggle="tooltip" data-placement="top">AP</span></th>
         <th class="narrow text-center"><span title="League Points" data-toggle="tooltip" data-placement="top">LP</span></th>
       </tr>
