--- a/app/views/leagues/_form.html.erb
+++ b/app/views/leagues/_form.html.erb
@@ -5,6 +5,15 @@
     </div>
   </div>
   <div class="form-group">
+    <%= f.label :privacy, "Privacy", class: "col-md-4 control-label" %>
+    <div class="col-md-8">
+      <label class="checkbox" style="font-weight:normal;"><%= f.radio_button :privacy, "open" %> <strong>Public</strong> &ndash; Anyone can join</label>
+      <label class="checkbox" style="font-weight:normal;"><%= f.radio_button :privacy, "closed" %> <strong>Private</strong> &ndash; Requests must be approved</label>
+      <label class="checkbox" style="font-weight:normal;"><%= f.radio_button :privacy, "invitational" %> <strong>Invitational</strong> &ndash; Players must be invited</label>
+      <small class="help-block">League tables for Private leagues will not be visible to non-members; Invitational league tables will be public</small>
+    </div>
+  </div>
+  <div class="form-group">
     <%= f.label :location_type, "Location", class: "col-md-4 control-label" %>
     <div class="col-md-4">
       <%= f.select :location_type, options_for_select([["Offline","offline"],["Online","online"]]), {}, { id:"type-select", class: "form-control" } %>
