--- a/app/views/leagues/edit.html.erb
+++ b/app/views/leagues/edit.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="col-md-6">
-    <div class="h3">League details</div>
+    <h3>League details</h3>
     <%= form_for @league, url: league_path(@league.id), html: { class: "form-horizontal" } do |f| %>
       <%= render partial: "leagues/form", locals: { f: f } %>
     <% end %>
@@ -52,6 +52,7 @@
         <li><%= player.display_name %></li>
       <% end %>
     </ul>
+  </div>
 </div>
 
 <%= render partial: "shared/delete_confirmation_modal", locals: { model_name: "League Season" } %>
