--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -5,7 +5,7 @@
         <span class="sr-only">Collapse Navbar</span>
         <i class="fa fa-list"></i>
       </button>
-      <%= link_to '<i class="nr-spin"></i> ANR League'.html_safe, root_path, class: "navbar-brand" %>
+      <%= link_to "#{'<i class="nr-spin"></i>'} #{SITE_NAME}".html_safe, root_path, class: "navbar-brand" %>
     </div>
 
     <div class="collapse navbar-collapse" id="headerMenu">
@@ -45,7 +45,11 @@
               <% end %>
             <li><%= link_to new_league_path do %><small><i class="fa fa-plus"></i> New League</small><% end %></li>
             <li class="dropdown-header">Memberships</li>
-            <li><a href="#">Coming soon</a></li>
+              <% if current_user.leagues.any? %>
+                <% current_user.leagues.each do |league| %>
+                  <li><%= link_to league.display_name.truncate(25), show_league_path(league.id,league.slug) %></li>
+                <% end %>
+              <% end %>
               <% if current_user.admin? %>
                 <li class="divider"></li>
                 <li><%= link_to "Admin Panel", "#" %></li>
